--- a/MovieJournalAPI/MovieJournalDAL/MovieJournalDAL.csproj
+++ b/MovieJournalAPI/MovieJournalDAL/MovieJournalDAL.csproj
@@ -52,10 +52,12 @@
   <ItemGroup>
     <Compile Include="Context\MovieContext.cs" />
     <Compile Include="Context\MovieDBInitialize.cs" />
+    <Compile Include="Facade.cs" />
     <Compile Include="Model\MovieOnList.cs" />
     <Compile Include="Model\Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\MovieOnListRepository.cs" />
     <Compile Include="Repository\ProfileRepository.cs" />
   </ItemGroup>
   <ItemGroup />
