--- a/MovieJournal/MovieJournalGateway/packages.config
+++ b/MovieJournal/MovieJournalGateway/packages.config
@@ -5,4 +5,5 @@
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
+  <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
 </packages>
