--- a/MovieJournal/MovieJournal/MovieJournal.csproj
+++ b/MovieJournal/MovieJournal/MovieJournal.csproj
@@ -178,6 +178,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\Profile\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
