--- a/MovieJournal/MovieJournalTest/MovieJournalTest.csproj
+++ b/MovieJournal/MovieJournalTest/MovieJournalTest.csproj
@@ -59,6 +59,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="AuthTest.cs" />
     <Compile Include="TMDBGatewayTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
