--- a/MovieJournal/MovieJournalGateway/packages.config
+++ b/MovieJournal/MovieJournalGateway/packages.config
@@ -1,11 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
-  <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
-  <package id="System.Net.Http" version="2.0.20710.0" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
   <package id="System.Net.Http.Formatting.Extension" version="5.2.3.0" targetFramework="net452" />
+  <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
