--- a/MovieJournal/MovieJournal/Web.config
+++ b/MovieJournal/MovieJournal/Web.config
@@ -19,6 +19,10 @@
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <!--Allows authentication modes-->
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/SignIn" />
+    </authentication>
   </system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
