--- a/MovieJournalAPI/MovieJournalAPI/MovieJournalAPI.csproj
+++ b/MovieJournalAPI/MovieJournalAPI/MovieJournalAPI.csproj
@@ -239,6 +239,10 @@
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Repository\Facade.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\MovieOnListRepository.cs" />
+    <Compile Include="Repository\ProfileRepository.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
