--- a/MovieJournal/MovieJournal/MovieJournal.csproj
+++ b/MovieJournal/MovieJournal/MovieJournal.csproj
@@ -208,8 +208,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\GetMovie.cshtml" />
     <Content Include="Views\Home\Search.cshtml" />
@@ -230,6 +228,10 @@
     <Content Include="Scripts\jquery-1.10.2.min.map" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MovieJournalBLL\MovieJournalBLL.csproj">
+      <Project>{03315773-e23b-4ccc-9a2a-2032c77a3c89}</Project>
+      <Name>MovieJournalBLL</Name>
+    </ProjectReference>
     <ProjectReference Include="..\MovieJournalDTO\MovieJournalDTO.csproj">
       <Project>{9ea45315-c6f1-471f-983b-e3f42de30e5d}</Project>
       <Name>MovieJournalDTO</Name>
